<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
<PreferenceCategory android:title="常规">
<CheckBoxPreference android:key="volume_fade"
    android:title="音量淡入淡出"
    android:summary="切换歌曲时，音量平滑过渡"
    android:summaryOn="淡入淡出"
    android:defaultValue="true"
    />
<CheckBoxPreference android:key="auto_switch_play"
    android:title="自动切换到播放界面"
    android:summary="点击列表项目，自动切换到正在播放界面"
	android:defaultValue="true"
    />
<ListPreference 
	    android:key="sleep_mode"
	    android:title="睡眠模式"
	    android:summary="请选择睡眠模式"
	    android:entries="@array/sleep_mode_entries"
	    android:entryValues="@array/sleep_mode_entry_values"
	    android:defaultValue="@string/sleep_mode_default"
	    />
<ListPreference 
	    android:key="screen_light_mode"
	    android:title="屏幕背光"
	    android:summary="请选择屏幕背光"
	    android:entries="@array/screen_light_entries"
	    android:entryValues="@array/screen_light_entry_values"
	    android:defaultValue="@string/screen_light_default"
	    />
</PreferenceCategory>
<PreferenceCategory android:title="在线音乐设置">
    <CheckBoxPreference android:key="saving_as_listening"
    android:title="边听边存"
    android:summary="WI-FI网络下在线试听缓冲完成后，自动将歌曲保存到本地音乐"
    android:summaryOn="淡入淡出"
    android:defaultValue="true"
    />
</PreferenceCategory>
<PreferenceCategory android:title="词图设置">
        <CheckBoxPreference android:key="show_pic_inside"
    android:title="优先显示内置图片"
    android:defaultValue="true"
    />
    <ListPreference 
	    android:key="pic_download_set"
	    android:title="图片下载设置"
	    android:summary="请选择图片下载模式"
	    android:entries="@array/download_entries"
	    android:entryValues="@array/download_entry_values"
	    android:defaultValue="@string/down_load_default"
	    />
    <ListPreference 
	    android:key="pic_download_set"
	    android:title="歌词下载设置"
	    android:summary="请选择歌词下载模式"
	    android:entries="@array/download_entries"
	    android:entryValues="@array/download_entry_values"
	    android:defaultValue="@string/down_load_default"
	    />
</PreferenceCategory>
<PreferenceCategory android:title="检查更新">
            <CheckBoxPreference android:key="check_update"
    android:title="新版本提示"
    android:defaultValue="true"
    />
</PreferenceCategory>
<PreferenceCategory android:title="网站地址">
<EditTextPreference android:key="address"
    android:title="音乐网站"
    android:dialogTitle="地址"
    android:defaultValue="http://172.60.100.142:8080/MOL/sounds.xml"/>
</PreferenceCategory>
</PreferenceScreen>